tests/diagnostics_golden/diag_pr222_shared_read_function.txt
Diagnostics Golden: Shared Read Function
Source: tests/negative/neg_pr222_shared_read_function.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_pr222_shared_read_function.safe:11:11: error: result-returning functions cannot mutate package state or access shared/channel state
  |
  | 11 |    return ledger.total
  |    |           ^~~~~~~~~~~~
  |
  note: SPARK functions cannot combine return values with global mutation or volatile shared access
  note: move the shared/channel access into a procedure and pass local snapshots to pure functions
------------------------------------------------------------------------
